--- a/webapp/angular/webroot/index.html
+++ b/webapp/angular/webroot/index.html
@@ -12,6 +12,10 @@
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="lib/less/dist/less-1.7.3.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular-route/angular-route.min.js"></script>
+    <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="lib/jssha/src/sha.js"></script>
+    <script src="js/cache-module.js"></script>
     <script src="js/app.js"></script>
 </head>
 <body>
@@ -33,10 +37,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Login</a></li>
-                <li><a href="#about">Register</a></li>
-            </ul>
+            <loginnavpartial></loginnavpartial>
         </div>
     </div>
 </div>
