Got sessions persisting to a file for now

--- a/webapp/angular/webroot/index.html
+++ b/webapp/angular/webroot/index.html
@@ -43,8 +43,7 @@
 </div>
 
 <div class="container">
-    asdf
-    <loginform>login</loginform>
+    <loginform></loginform>
 </div>
 </body>
 </html>
